Contador de muertes mas arreglo de bug